--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 </head>
 <body>
     <div class="title">
-        <span>Proyecto T</span>
-        <span class="classified"></span>
+        <span>Proyecto Tontaria</span>
     </div>
     <div class="countdown">
         <div class="days">
