--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto T</title>
+    <title>Proyecto Tontaria</title>
     <style>
         @font-face { font-family: Typewriter; src: url('Typewriter.ttf'); }
         * {
@@ -24,6 +24,7 @@
             display: flex;
             justify-content: center;
             font-size: 30px;
+            z-index: 1;
         }
         .classified{
             background-color: #ddd;
@@ -36,6 +37,7 @@
             gap: 0.3rem; 
             margin-top: 50px; 
             text-transform: uppercase; 
+            z-index: 1;
             } 
         .countdown div { 
             display: flex; 
@@ -66,10 +68,13 @@
         }
         .box-container {
             position: fixed;
-            top: 50%;
-            left: 50%;
             transform: translate(-50%, -50%);
             perspective: 800px;
+            left: 0; 
+            right: 0; 
+            top: 100px;
+            margin-inline: auto; 
+            width: fit-content;
         }
 
         .box {
@@ -77,40 +82,51 @@
             width: 20px;
             height: 20px;
             transform-style: preserve-3d;
-            transform: rotateX(45deg) rotateY(45deg);
-            animation: rotate 10s infinite linear;
+            transform: rotateX(-15deg) rotateY(-15deg) translateX(-50px);
+            z-index: -10;
+            /* animation: rotate 10s infinite linear; */
         }
 
         .face {
             position: absolute;
-            width: 20px;
-            height: 20px;
-            background: rgba(255, 255, 255, 0.8); /* Semi-transparent faces */
-            border: 1px solid rgba(255, 255, 255, 0.9);
+            background: rgb(30, 30, 30); /* Semi-transparent faces */
+            /* border: 1px solid rgba(255, 255, 255, 0.6); */
         }
 
         .front {
-            transform: translateZ(10px);
+            transform: translateZ(25px);
+            height: 150px;
+            width: 150px;
         }
 
         .back {
-            transform: rotateY(180deg) translateZ(10px);
+            transform: rotateY(180deg) translateZ(25px);
+            height: 150px;
+            width: 150px;
         }
 
         .left {
-            transform: rotateY(-90deg) translateZ(10px);
+            transform: rotateY(-90deg) translateZ(25px);
+            height: 150px;
+            width: 50px;
         }
 
         .right {
-            transform: rotateY(90deg) translateZ(10px);
+            transform: rotateY(90deg) translateZ(125px);
+            height: 150px;
+            width: 50px;
         }
 
         .top {
-            transform: rotateX(90deg) translateZ(10px);
+            transform: rotateX(90deg) translateZ(25px);
+            width: 150px;
+            height: 50px;
         }
 
         .bottom {
-            transform: rotateX(-90deg) translateZ(10px);
+            transform: rotateX(-90deg) translateZ(125px);
+            width: 150px;
+            height: 50px;
         }
 
         @keyframes rotate {
